# Coursework_5

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
config/: employers.yaml
src/api/: api.py
src/data_base/: db.py  db_creator.py  db_manager.py  instructions.sql  table_creator.py
src/data_base/tables/: emploers_table.yaml  employers_table.yaml  vacancies_table.yaml
src/fixtures/: data.yaml  employer.yaml
src/head_hunter/: api.py
src/ui/: add_server.py  db_settings.py  employers_list.py  ui_db_manager.py  ui_main.py  ui_utils.py
src/utils/: config.py  file_manager.py
tests/: conftest.py  test_file_manager.py
